packages/svelte/tests/compiler-errors/samples/runes-bindable-not-called/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'rune_missing_parentheses',
		message: 'Cannot use rune without parentheses'
	}
});
